{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 82,
  "lineage": "7a6d28d2-c5db-b835-cc76-b2b8c5a38321",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_region1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:735646151765:route-table/rtb-07a9743314c169930",
            "id": "rtb-07a9743314c169930",
            "owner_id": "735646151765",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "private-vpc0-rt"
            },
            "tags_all": {
              "Name": "private-vpc0-rt",
              "Owner": "Karel Pouzar",
              "Project": "cloudwan-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0681e5d1f84b9649d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735646151765",
            "id": "rtb-07a9743314c169930",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.region1_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:735646151765:route-table/rtb-048eb6661e792348c",
            "id": "rtb-048eb6661e792348c",
            "owner_id": "735646151765",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "private-vpc1-rt"
            },
            "tags_all": {
              "Name": "private-vpc1-rt",
              "Owner": "Karel Pouzar",
              "Project": "cloudwan-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-087a2ccfb41d29b90"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735646151765",
            "id": "rtb-048eb6661e792348c",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.region1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_region2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:735646151765:route-table/rtb-0c54ba4d64fa7ec31",
            "id": "rtb-0c54ba4d64fa7ec31",
            "owner_id": "735646151765",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [],
            "tags": {
              "Name": "private-vpc0-rt"
            },
            "tags_all": {
              "Name": "private-vpc0-rt",
              "Owner": "Karel Pouzar",
              "Project": "cloudwan-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0767b265db8d4a636"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735646151765",
            "id": "rtb-0c54ba4d64fa7ec31",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.region2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:735646151765:route-table/rtb-0fc0ab6930aacecb0",
            "id": "rtb-0fc0ab6930aacecb0",
            "owner_id": "735646151765",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [],
            "tags": {
              "Name": "private-vpc1-rt"
            },
            "tags_all": {
              "Name": "private-vpc1-rt",
              "Owner": "Karel Pouzar",
              "Project": "cloudwan-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-051c97cf2a595e760"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735646151765",
            "id": "rtb-0fc0ab6930aacecb0",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.region2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tgw_region1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:735646151765:route-table/rtb-07ddb4a340fd68a66",
            "id": "rtb-07ddb4a340fd68a66",
            "owner_id": "735646151765",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "tgw-vpc0-rt"
            },
            "tags_all": {
              "Name": "tgw-vpc0-rt",
              "Owner": "Karel Pouzar",
              "Project": "cloudwan-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0681e5d1f84b9649d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735646151765",
            "id": "rtb-07ddb4a340fd68a66",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.region1_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:735646151765:route-table/rtb-03216b93a466cd002",
            "id": "rtb-03216b93a466cd002",
            "owner_id": "735646151765",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "tgw-vpc1-rt"
            },
            "tags_all": {
              "Name": "tgw-vpc1-rt",
              "Owner": "Karel Pouzar",
              "Project": "cloudwan-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-087a2ccfb41d29b90"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735646151765",
            "id": "rtb-03216b93a466cd002",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.region1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tgw_region2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:735646151765:route-table/rtb-0b39a9a85d0484e8f",
            "id": "rtb-0b39a9a85d0484e8f",
            "owner_id": "735646151765",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [],
            "tags": {
              "Name": "tgw-vpc0-rt"
            },
            "tags_all": {
              "Name": "tgw-vpc0-rt",
              "Owner": "Karel Pouzar",
              "Project": "cloudwan-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0767b265db8d4a636"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735646151765",
            "id": "rtb-0b39a9a85d0484e8f",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.region2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:735646151765:route-table/rtb-02060754408d1b917",
            "id": "rtb-02060754408d1b917",
            "owner_id": "735646151765",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [],
            "tags": {
              "Name": "tgw-vpc1-rt"
            },
            "tags_all": {
              "Name": "tgw-vpc1-rt",
              "Owner": "Karel Pouzar",
              "Project": "cloudwan-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-051c97cf2a595e760"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735646151765",
            "id": "rtb-02060754408d1b917",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.region2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_pub_a_region1_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0453de73de4bb73f1",
            "region": "eu-central-1",
            "route_table_id": "rtb-07a9743314c169930",
            "subnet_id": "subnet-0edf1a8293e68b9f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_region1_rt",
            "aws_subnet.server_a_region1_subnet",
            "aws_vpc.region1_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01aaf179cfffc336b",
            "region": "eu-central-1",
            "route_table_id": "rtb-048eb6661e792348c",
            "subnet_id": "subnet-03beb40658f7d221d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_region1_rt",
            "aws_subnet.server_a_region1_subnet",
            "aws_vpc.region1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_pub_a_region2_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02959551556f92190",
            "region": "eu-north-1",
            "route_table_id": "rtb-0c54ba4d64fa7ec31",
            "subnet_id": "subnet-014a714cb36909ba3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_region2_rt",
            "aws_subnet.server_a_region2_subnet",
            "aws_vpc.region2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051ec0b835d675154",
            "region": "eu-north-1",
            "route_table_id": "rtb-0fc0ab6930aacecb0",
            "subnet_id": "subnet-08d1b6ab33de7db65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_region2_rt",
            "aws_subnet.server_a_region2_subnet",
            "aws_vpc.region2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_tgw_a_region1_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067ba63aa277379ec",
            "region": "eu-central-1",
            "route_table_id": "rtb-07ddb4a340fd68a66",
            "subnet_id": "subnet-050a29ff95d074ada"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.tgw_region1_rt",
            "aws_subnet.tgw_a_region1_subnet",
            "aws_vpc.region1_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8ef5a44004fcfee",
            "region": "eu-central-1",
            "route_table_id": "rtb-03216b93a466cd002",
            "subnet_id": "subnet-06d49d460a91919b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.tgw_region1_rt",
            "aws_subnet.tgw_a_region1_subnet",
            "aws_vpc.region1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_tgw_a_region2_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c42636b453feff6c",
            "region": "eu-north-1",
            "route_table_id": "rtb-0b39a9a85d0484e8f",
            "subnet_id": "subnet-085f0764b637552b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.tgw_region2_rt",
            "aws_subnet.tgw_a_region2_subnet",
            "aws_vpc.region2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0852a93312a4adea7",
            "region": "eu-north-1",
            "route_table_id": "rtb-02060754408d1b917",
            "subnet_id": "subnet-0c8e1cd003027755c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.tgw_region2_rt",
            "aws_subnet.tgw_a_region2_subnet",
            "aws_vpc.region2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "server_a_region1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:735646151765:subnet/subnet-0edf1a8293e68b9f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edf1a8293e68b9f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735646151765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "server-a-vpc0-subnet"
            },
            "tags_all": {
              "Name": "server-a-vpc0-subnet",
              "Owner": "Karel Pouzar",
              "Project": "cloudwan-demo"
            },
            "vpc_id": "vpc-0681e5d1f84b9649d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735646151765",
            "id": "subnet-0edf1a8293e68b9f6",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.region1_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:735646151765:subnet/subnet-03beb40658f7d221d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03beb40658f7d221d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735646151765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "server-a-vpc1-subnet"
            },
            "tags_all": {
              "Name": "server-a-vpc1-subnet",
              "Owner": "Karel Pouzar",
              "Project": "cloudwan-demo"
            },
            "vpc_id": "vpc-087a2ccfb41d29b90"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735646151765",
            "id": "subnet-03beb40658f7d221d",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.region1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "server_a_region2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:735646151765:subnet/subnet-014a714cb36909ba3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.64.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014a714cb36909ba3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735646151765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "server-a-vpc0-subnet"
            },
            "tags_all": {
              "Name": "server-a-vpc0-subnet",
              "Owner": "Karel Pouzar",
              "Project": "cloudwan-demo"
            },
            "vpc_id": "vpc-0767b265db8d4a636"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735646151765",
            "id": "subnet-014a714cb36909ba3",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.region2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:735646151765:subnet/subnet-08d1b6ab33de7db65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.65.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d1b6ab33de7db65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735646151765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "server-a-vpc1-subnet"
            },
            "tags_all": {
              "Name": "server-a-vpc1-subnet",
              "Owner": "Karel Pouzar",
              "Project": "cloudwan-demo"
            },
            "vpc_id": "vpc-051c97cf2a595e760"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735646151765",
            "id": "subnet-08d1b6ab33de7db65",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.region2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tgw_a_region1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:735646151765:subnet/subnet-050a29ff95d074ada",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050a29ff95d074ada",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735646151765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "tgw-a-vpc0-subnet"
            },
            "tags_all": {
              "Name": "tgw-a-vpc0-subnet",
              "Owner": "Karel Pouzar",
              "Project": "cloudwan-demo"
            },
            "vpc_id": "vpc-0681e5d1f84b9649d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735646151765",
            "id": "subnet-050a29ff95d074ada",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.region1_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:735646151765:subnet/subnet-06d49d460a91919b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d49d460a91919b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735646151765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "tgw-a-vpc1-subnet"
            },
            "tags_all": {
              "Name": "tgw-a-vpc1-subnet",
              "Owner": "Karel Pouzar",
              "Project": "cloudwan-demo"
            },
            "vpc_id": "vpc-087a2ccfb41d29b90"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735646151765",
            "id": "subnet-06d49d460a91919b7",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.region1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tgw_a_region2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:735646151765:subnet/subnet-085f0764b637552b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.64.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085f0764b637552b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735646151765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "tgw-a-vpc0-subnet"
            },
            "tags_all": {
              "Name": "tgw-a-vpc0-subnet",
              "Owner": "Karel Pouzar",
              "Project": "cloudwan-demo"
            },
            "vpc_id": "vpc-0767b265db8d4a636"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735646151765",
            "id": "subnet-085f0764b637552b9",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.region2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:735646151765:subnet/subnet-0c8e1cd003027755c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.65.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8e1cd003027755c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735646151765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "tgw-a-vpc1-subnet"
            },
            "tags_all": {
              "Name": "tgw-a-vpc1-subnet",
              "Owner": "Karel Pouzar",
              "Project": "cloudwan-demo"
            },
            "vpc_id": "vpc-051c97cf2a595e760"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735646151765",
            "id": "subnet-0c8e1cd003027755c",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.region2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "region1_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:735646151765:vpc/vpc-0681e5d1f84b9649d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0074278b512675472",
            "default_route_table_id": "rtb-09ab53b51c520b90f",
            "default_security_group_id": "sg-0f8413ee32b3a2443",
            "dhcp_options_id": "dopt-51b7f539",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0681e5d1f84b9649d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09ab53b51c520b90f",
            "owner_id": "735646151765",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "Name": "test-vpc-0"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "test-vpc-0",
              "Owner": "Karel Pouzar",
              "Project": "cloudwan-demo"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735646151765",
            "id": "vpc-0681e5d1f84b9649d",
            "region": "eu-central-1"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:735646151765:vpc/vpc-087a2ccfb41d29b90",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0d789246d501b2b6c",
            "default_route_table_id": "rtb-04c5840817387247b",
            "default_security_group_id": "sg-076cdbe8c5bfaad62",
            "dhcp_options_id": "dopt-51b7f539",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-087a2ccfb41d29b90",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04c5840817387247b",
            "owner_id": "735646151765",
            "region": "eu-central-1",
            "tags": {
              "Environment": "prod",
              "Name": "test-vpc-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "test-vpc-1",
              "Owner": "Karel Pouzar",
              "Project": "cloudwan-demo"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735646151765",
            "id": "vpc-087a2ccfb41d29b90",
            "region": "eu-central-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "region2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:735646151765:vpc/vpc-0767b265db8d4a636",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.64.0.0/16",
            "default_network_acl_id": "acl-051d4dc3d1f98c524",
            "default_route_table_id": "rtb-0c7cb812968d2ce27",
            "default_security_group_id": "sg-06bcd2650d938ec00",
            "dhcp_options_id": "dopt-66a34c0f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0767b265db8d4a636",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7cb812968d2ce27",
            "owner_id": "735646151765",
            "region": "eu-north-1",
            "tags": {
              "Environment": "dev",
              "Name": "test-vpc-0"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "test-vpc-0",
              "Owner": "Karel Pouzar",
              "Project": "cloudwan-demo"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735646151765",
            "id": "vpc-0767b265db8d4a636",
            "region": "eu-north-1"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:735646151765:vpc/vpc-051c97cf2a595e760",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.65.0.0/16",
            "default_network_acl_id": "acl-04bc3136f359e529e",
            "default_route_table_id": "rtb-03311da4e32fa3fc9",
            "default_security_group_id": "sg-04d93bd36c09e44a7",
            "dhcp_options_id": "dopt-66a34c0f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-051c97cf2a595e760",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03311da4e32fa3fc9",
            "owner_id": "735646151765",
            "region": "eu-north-1",
            "tags": {
              "Environment": "prod",
              "Name": "test-vpc-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "test-vpc-1",
              "Owner": "Karel Pouzar",
              "Project": "cloudwan-demo"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "735646151765",
            "id": "vpc-051c97cf2a595e760",
            "region": "eu-north-1"
          }
        }
      ]
    }
  ]
}